# ML_FP

./: .gitignore
1_cn_extractor/: CMakeLists.txt  README.md  config.ini
1_cn_extractor/build_mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
1_cn_extractor/src/: config.cpp  config.h  rnx_extract.cpp  signals.h  utils.h
2_dataset_processor/: config.ini  gnss_processor.py  readme.md
3_label_tool/: GPS_Data_Analyzer.asv  GPS_Data_Analyzer.m  SatelliteDataLabeler.m  SatelliteSignalLabeler.m  plotstate.m  readme.md
4_convert_to_dataset/: config.ini  config.py  convert2dataset.py  readme.md
cn_extractor/src/: log.cpp  log.h  main.cpp  rnx_extract.h  utils.cpp
data/sp3/: IGS0OPSFIN_20250110000_01D_15M_ORB.SP3  IGS0OPSFIN_20250120000_01D_15M_ORB.SP3  IGS0OPSFIN_20250130000_01D_15M_ORB.SP3  IGS0OPSFIN_20250140000_01D_15M_ORB.SP3
flexpower_causal_transformer/: README.md  config.py  config.yaml  convert_csv_to_model_data.py  export_onnx.py  generate_data.py  generate_raw_csv_data.py  model.py  readme.md  test.py  train.py  visualization_result.py  visualize.py
flexpower_causal_transformer/data/: dataset.py
flexpower_causal_transformer/logs/: events.out.tfevents.1757232781.DESKTOP-G9OA8GN  events.out.tfevents.1757232899.DESKTOP-G9OA8GN  events.out.tfevents.1757233097.DESKTOP-G9OA8GN  events.out.tfevents.1757343633.DESKTOP-G9OA8GN  events.out.tfevents.1757346235.DESKTOP-G9OA8GN  (+6 more)
label_tool/: AGGO_2025001_CN_C12_S6I_labeled.csv  CN0LabelerApp.m
utils/: CN0MultiPlotter.m  Readme.md  temp_converter.py  visualize_flex_power_results.m
(+17 files in other folders)
